# ChatU

client/: app.tsx  contacts.ts  index.html  main.tsx  package-lock.json  package.json  websocket.tsx
client/main/: chat.css  chat.tsx  join.tsx
client/src/: App.svelte  animation.css  app.css  app.tsx  footer.css  index.css  main.ts  main.tsx  nav.css  vite-env.d.ts  websocket.ts  websocket.tsx
client/src/main/: chat.css  chat.tsx  join.css  join.tsx
client/src/pages/: About.svelte  Contact.svelte  Home.svelte  News.svelte  SignUp.tsx
client/src/sidebar/: connect.css  connect.tsx
server/: Cargo.toml  chat.html
server/src/: main.rs
