[package]
name = "chatu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tower-http = { version = "0.4.4", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.189", features = ["derive", "rc"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql"] }
